PA3/prettyPrinter.java
/* Generated By:JavaCC: Do not edit this line. prettyPrinter.java */
public class prettyPrinter implements prettyPrinterConstants {

  /** Main entry point. */
  public static void main(String args[]) {
    //System.out.println("Reading from standard input...");
    prettyPrinter t = new prettyPrinter(System.in);
    try {
      t.Start(0);
      //System.out.println("Thank you.");
    } catch (Exception e) {
      System.out.println("Oops.");
      System.out.println(e.getMessage());
      e.printStackTrace();
    }
  }

  static final public void Start(int indentLevel) throws ParseException {
                             String result;
    result = Program(indentLevel);
                                  System.out.println(result);
    jj_consume_token(0);
  }

  static final public String Exp(int indentLevel) throws ParseException {
 Token t;
 String temp = "", temp1 = "";
 String expr = "".repeat(indentLevel);
    if (jj_2_1(3)) {
      t = jj_consume_token(INTEGER_LITERAL);
                             expr += t.image;
    } else if (jj_2_2(3)) {
      t = jj_consume_token(TRUE);
                 expr += t.image;
    } else if (jj_2_3(3)) {
      t = jj_consume_token(FALSE);
                  expr += t.image;
    } else if (jj_2_4(3)) {
      t = jj_consume_token(IDENTIFIER);
                       expr += t.image;
    } else if (jj_2_5(3)) {
      t = jj_consume_token(THIS);
                 expr += t.image;
    } else if (jj_2_6(3)) {
      jj_consume_token(NEW);
      jj_consume_token(INT);
      jj_consume_token(LBRACKET);
      temp = Exp(indentLevel);
      jj_consume_token(RBRACKET);
                                                                  expr += "new int[" + temp  + "]";
    } else if (jj_2_7(3)) {
      jj_consume_token(NEW);
      t = jj_consume_token(IDENTIFIER);
      jj_consume_token(LPARENS);
      jj_consume_token(RPARENS);
                                                 expr += "new " + t.image + "()";
    } else if (jj_2_8(3)) {
      jj_consume_token(NEGATE);
      temp = Exp(indentLevel);
                                       expr += "!" + temp;
    } else if (jj_2_9(3)) {
      jj_consume_token(LPARENS);
      temp = Exp(indentLevel);
      jj_consume_token(RPARENS);
                                                  expr += "(" + temp + ")";
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    if (jj_2_10(3)) {
      temp1 = Exp1(indentLevel);
                                   expr += temp1;
    } else {
      ;
    }
      {if (true) return expr;}
    throw new Error("Missing return statement in function");
  }

  static final public String Exp1(int indentLevel) throws ParseException {
    String expr="";
        String temp = "", temp1 = "";
        Token t;
    if (jj_2_12(3)) {
      jj_consume_token(PLUS);
      temp = Exp(indentLevel);
                                      expr += " + " + temp;
    } else if (jj_2_13(3)) {
      jj_consume_token(MINUS);
      temp = Exp(indentLevel);
                                      expr += " - " + temp;
    } else if (jj_2_14(3)) {
      jj_consume_token(MULTIPLY);
      temp = Exp(indentLevel);
                                         expr += "* " + temp;
    } else if (jj_2_15(3)) {
      jj_consume_token(LESS_THAN);
      temp = Exp(indentLevel);
                                          expr += "< " + temp;
    } else if (jj_2_16(3)) {
      jj_consume_token(AND);
      temp = Exp(indentLevel);
                                    expr += " && " + temp;
    } else if (jj_2_17(3)) {
      jj_consume_token(LBRACKET);
      temp = Exp(indentLevel);
      jj_consume_token(RBRACKET);
                                                    expr += "[" + temp + "]";
    } else if (jj_2_18(3)) {
      jj_consume_token(DOT);
      jj_consume_token(LENGTH);
                     expr += ".length";
    } else if (jj_2_19(3)) {
      jj_consume_token(DOT);
      t = jj_consume_token(IDENTIFIER);
      jj_consume_token(LPARENS);
      if (jj_2_11(3)) {
        temp = ExpList(indentLevel);
      } else {
        ;
      }
      jj_consume_token(RPARENS);
                                                                               expr += "." + t.image + "(" + temp + ")";
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    if (jj_2_20(3)) {
      temp1 = Exp1(indentLevel);
                               expr += temp1;
    } else {
      ;
    }
        {if (true) return expr;}
    throw new Error("Missing return statement in function");
  }

  static final public String ExpRest(int indentLevel) throws ParseException {
 String expr="", temp = "";
    jj_consume_token(COMMA);
    temp = Exp(indentLevel);
                                     expr = ", " + temp;
     {if (true) return expr;}
    throw new Error("Missing return statement in function");
  }

  static final public String ExpList(int indentLevel) throws ParseException {
  String expr="", temp = "", temp1 = "";
    temp = Exp(indentLevel);
    temp1 = ExpList1(indentLevel);
                                                           expr = temp + temp1;
     {if (true) return expr;}
    throw new Error("Missing return statement in function");
  }

  static final public String ExpList1(int indentLevel) throws ParseException {
  String expr="", temp = "", temp1 = "";
    if (jj_2_21(3)) {
      temp = ExpRest(indentLevel);
      temp1 = ExpList1(indentLevel);
                                                           expr = temp + temp1;
     {if (true) return expr;}
    } else {
                      {if (true) return expr;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public String Program(int indentLevel) throws ParseException {
 String expr="", temp = "", temp1 = "";
    temp = MainClass(indentLevel);
                                   expr += temp;
    label_1:
    while (true) {
      if (jj_2_22(3)) {
        ;
      } else {
        break label_1;
      }
      temp1 = ClassDecl(indentLevel);
                                     expr += temp1;
    }
     {if (true) return expr;}
    throw new Error("Missing return statement in function");
  }

  static final public String MainClass(int indentLevel) throws ParseException {
                                    String expr="", temp = ""; Token t, t1;
     indentLevel += 1;
    jj_consume_token(CLASS);
    t = jj_consume_token(IDENTIFIER);
    jj_consume_token(L_C_BRACKET);
    jj_consume_token(PUBLIC);
    jj_consume_token(STATIC);
    jj_consume_token(VOID);
    jj_consume_token(MAIN);
    jj_consume_token(LPARENS);
    jj_consume_token(STRING);
    jj_consume_token(LBRACKET);
    jj_consume_token(RBRACKET);
    t1 = jj_consume_token(IDENTIFIER);
    jj_consume_token(RPARENS);
    jj_consume_token(L_C_BRACKET);
    temp = Statement(indentLevel + 1);
    jj_consume_token(R_C_BRACKET);
    jj_consume_token(R_C_BRACKET);
     expr = "class " + t.image + "{\n" + "    ".repeat(indentLevel) + "public static void main(String[] " + t1.image + "){\n" + temp + "    ".repeat(indentLevel) +"}\n}\n";
     indentLevel -= 1;
     {if (true) return expr;}
    throw new Error("Missing return statement in function");
  }

  static final public String ClassDecl(int indentLevel) throws ParseException {
                                    String expr = "", temp="", temp1=""; Token t, t1;
     indentLevel += 1;
    jj_consume_token(CLASS);
    t = jj_consume_token(IDENTIFIER);
                              expr += "class " + t.image;
    if (jj_2_23(3)) {
      jj_consume_token(EXTENDS);
      t1 = jj_consume_token(IDENTIFIER);
                                   expr += "extends" + t1.image;
    } else {
      ;
    }
    jj_consume_token(L_C_BRACKET);
                    expr += "{\n";
    label_2:
    while (true) {
      if (jj_2_24(3)) {
        ;
      } else {
        break label_2;
      }
      temp = VarDecl(indentLevel);
                                   expr += temp;
    }
    label_3:
    while (true) {
      if (jj_2_25(3)) {
        ;
      } else {
        break label_3;
      }
      temp1 = MethodDecl(indentLevel);
                                       expr += temp1;
    }
    jj_consume_token(R_C_BRACKET);
                    expr += "}\n";
       indentLevel -= 1;
     {if (true) return expr;}
    throw new Error("Missing return statement in function");
  }

  static final public String VarDecl(int indentLevel) throws ParseException {
 Token t; String expr="    ".repeat(indentLevel), temp="";
    temp = Type(indentLevel);
    t = jj_consume_token(IDENTIFIER);
    jj_consume_token(SEMICOLON);
                                                           expr = "    ".repeat(indentLevel) + temp + " " + t.image + ";\n";
     {if (true) return expr;}
    throw new Error("Missing return statement in function");
  }

  static final public String MethodDecl(int indentLevel) throws ParseException {
 Token t;
 String expr="    ".repeat(indentLevel), type, formalList, varDecl, statement, exp;
     indentLevel += 1;
    jj_consume_token(PUBLIC);
    type = Type(indentLevel);
    t = jj_consume_token(IDENTIFIER);
    jj_consume_token(LPARENS);
                                                              expr += "public " + type + " " + t.image + "(";
    if (jj_2_26(3)) {
      formalList = FormalList(indentLevel);
                                           expr += formalList;
    } else {
      ;
    }
    jj_consume_token(RPARENS);
    jj_consume_token(L_C_BRACKET);
                             expr += "){\n";
    label_4:
    while (true) {
      if (jj_2_27(3)) {
        ;
      } else {
        break label_4;
      }
      varDecl = VarDecl(indentLevel);
                                     expr += varDecl;
    }
    label_5:
    while (true) {
      if (jj_2_28(3)) {
        ;
      } else {
        break label_5;
      }
      statement = Statement(indentLevel);
                                         expr += statement;
    }
    jj_consume_token(RETURN);
    exp = Exp(indentLevel);
    jj_consume_token(SEMICOLON);
    jj_consume_token(R_C_BRACKET);
                                                               expr += "    ".repeat(indentLevel) + "return" + " " + exp + ";\n"+ "    ".repeat(indentLevel-1) +"}\n\n";
     indentLevel -= 1;
     {if (true) return expr;}
    throw new Error("Missing return statement in function");
  }

  static final public String FormalList(int indentLevel) throws ParseException {
 String expr="", type, formalRest;
 Token t;
    type = Type(indentLevel);
    t = jj_consume_token(IDENTIFIER);
                                           expr += type + " " + t.image;
    label_6:
    while (true) {
      if (jj_2_29(3)) {
        ;
      } else {
        break label_6;
      }
      formalRest = FormalRest(indentLevel);
                                           expr += formalRest;
    }
     {if (true) return expr;}
    throw new Error("Missing return statement in function");
  }

  static final public String FormalRest(int indentLevel) throws ParseException {
                                     String expr="",type; Token t;
    jj_consume_token(COMMA);
    type = Type(indentLevel);
    t = jj_consume_token(IDENTIFIER);
                                                   expr += ", " + type + " " + t;
     {if (true) return expr;}
    throw new Error("Missing return statement in function");
  }

  static final public String Type(int indentLevel) throws ParseException {
                               Token t; String expr="";
    if (jj_2_30(3)) {
      jj_consume_token(INT);
      jj_consume_token(LBRACKET);
      jj_consume_token(RBRACKET);
                                  expr = "int[]";
    } else if (jj_2_31(3)) {
      jj_consume_token(BOOLEAN);
                 expr = "boolean";
    } else if (jj_2_32(3)) {
      jj_consume_token(INT);
             expr = "int";
    } else if (jj_2_33(3)) {
      t = jj_consume_token(IDENTIFIER);
                      expr = t.image;
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
     {if (true) return expr;}
    throw new Error("Missing return statement in function");
  }

  static final public String Statement(int indentLevel) throws ParseException {
 String expr = "    ".repeat(indentLevel), statement, statement1, exp, exp1;
 Token t;
    if (jj_2_35(3)) {
      jj_consume_token(L_C_BRACKET);
                    expr += "{\n";
      label_7:
      while (true) {
        if (jj_2_34(3)) {
          ;
        } else {
          break label_7;
        }
        statement = Statement(indentLevel+1);
                                        expr += statement;
      }
      jj_consume_token(R_C_BRACKET);
                  expr += "    ".repeat(indentLevel) + "}\n";
    } else if (jj_2_36(3)) {
      jj_consume_token(IF);
      jj_consume_token(LPARENS);
      exp = Exp(indentLevel);
      jj_consume_token(RPARENS);
      statement = Statement(indentLevel+1);
      jj_consume_token(ELSE);
      statement1 = Statement(indentLevel+1);
                                                                                                                                   indentLevel += 1;
                                                                                                                                                      expr += "if(" + exp + ")\n" + statement + "\n" + "    ".repeat(indentLevel-1) + "else\n" + statement1;
                                                                                                                                                                                                                                                               indentLevel -= 1;
    } else if (jj_2_37(3)) {
      jj_consume_token(WHILE);
      exp = Exp(indentLevel);
      statement = Statement(indentLevel);
                                                                     expr += "while (" + exp + ")\n" + statement + "\n";
    } else if (jj_2_38(3)) {
      jj_consume_token(PRINT);
      jj_consume_token(LPARENS);
      exp = Exp(indentLevel);
      jj_consume_token(RPARENS);
      jj_consume_token(SEMICOLON);
                                                                    expr += "System.out.println(" + exp + ");\n";
    } else if (jj_2_39(3)) {
      t = jj_consume_token(IDENTIFIER);
      jj_consume_token(ASSIGN);
      exp = Exp(indentLevel);
      jj_consume_token(SEMICOLON);
                                                                expr += t.image + " = " + exp + ";\n";
    } else if (jj_2_40(3)) {
      t = jj_consume_token(IDENTIFIER);
      jj_consume_token(LBRACKET);
      exp = Exp(indentLevel);
      jj_consume_token(RBRACKET);
      jj_consume_token(ASSIGN);
      exp1 = Exp(indentLevel);
      jj_consume_token(SEMICOLON);
                                                                                                            expr += t.image + "[" + exp + "]" + " = " + exp1 + ";\n";
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
     {if (true) return expr;}
    throw new Error("Missing return statement in function");
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  static private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  static private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  static private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  static private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  static private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  static private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  static private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  static private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  static private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  static private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  static private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  static private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  static private boolean jj_2_19(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  static private boolean jj_2_20(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_20(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  static private boolean jj_2_21(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_21(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  static private boolean jj_2_22(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_22(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  static private boolean jj_2_23(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_23(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  static private boolean jj_2_24(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_24(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(23, xla); }
  }

  static private boolean jj_2_25(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_25(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(24, xla); }
  }

  static private boolean jj_2_26(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_26(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(25, xla); }
  }

  static private boolean jj_2_27(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_27(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(26, xla); }
  }

  static private boolean jj_2_28(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_28(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(27, xla); }
  }

  static private boolean jj_2_29(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_29(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(28, xla); }
  }

  static private boolean jj_2_30(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_30(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(29, xla); }
  }

  static private boolean jj_2_31(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_31(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(30, xla); }
  }

  static private boolean jj_2_32(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_32(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(31, xla); }
  }

  static private boolean jj_2_33(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_33(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(32, xla); }
  }

  static private boolean jj_2_34(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_34(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(33, xla); }
  }

  static private boolean jj_2_35(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_35(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(34, xla); }
  }

  static private boolean jj_2_36(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_36(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(35, xla); }
  }

  static private boolean jj_2_37(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_37(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(36, xla); }
  }

  static private boolean jj_2_38(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_38(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(37, xla); }
  }

  static private boolean jj_2_39(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_39(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(38, xla); }
  }

  static private boolean jj_2_40(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_40(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(39, xla); }
  }

  static private boolean jj_3_23() {
    if (jj_scan_token(EXTENDS)) return true;
    if (jj_scan_token(IDENTIFIER)) return true;
    return false;
  }
